// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset component renders as expected 1`] = `
<fieldset
  className="es-fieldset sc-bwzfXH kzYDuJ"
>
  <div>
    Fieldset child
  </div>
</fieldset>
`;

exports[`Fieldset component renders as expected with legendText 1`] = `
<fieldset
  className="es-fieldset sc-bwzfXH kzYDuJ"
>
  <legend
    className="es-fieldset__legend sc-bdVaJa NnbOj"
  >
    I am legend
  </legend>
  <div>
    Fieldset child
  </div>
</fieldset>
`;
